--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-$Id: README,v 1.2 2004/06/06 11:44:20 jact Exp $
+$Id: README,v 1.3 2004/08/07 11:13:42 jact Exp $
 
 OpenClinic: Web Medical Records System
 ======================================
@@ -19,11 +19,12 @@ Currently OpenClinic has the following options:
     * Medical Records
 
       Use this option to manage your patient's medical records.
-          o Patient's Administration:
-                + Search, new, delete, edit
-                + Social Data
-                + Clinic History
-                + Problem Reports
+
+      Patient's Administration:
+          o Search, new, delete, edit
+          o Social Data
+          o Clinic History
+          o Problem Reports
 
     * Admin
 
@@ -32,14 +33,13 @@ Currently OpenClinic has the following options:
           o Theme editor
           o Staff members
           o System Users
-          o User profiles
           o Dumps
           o Log Statistics
 
 Requirements
 ============
 
-    * PHP4 >= 4.2 (due to session variable changes in PHP 4.2) compiled with MySQL support (tested with versions 4.2.1, 4.2.2, 4.2.3, 4.3, 4.3.1, 4.3.2, 4.3.3, 4.3.4 and 4.3.6);
+    * PHP4 >= 4.2 (due to session variable changes in PHP 4.2) compiled with MySQL support (tested with versions 4.2.* and 4.3.*);
 
     * MySQL (tested with versions 3.23.36, 3.23.49, 3.23.51, 3.23.52, 3.23.54, 3.23.55, 4.0.16 and 4.0.18);
 
