Integra el contenido del fichero .poedit

--- a/locale/openclinic.pot
+++ b/locale/openclinic.pot
@@ -2,12 +2,23 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenClinic 0.7\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2004-08-28 18:34+0100\n"
+"PO-Revision-Date: 2004-09-18 18:02+0100\n"
 "Last-Translator: jact <jachavar@terra.es>\n"
 "Language-Team:  <jachavar@terra.es>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Poedit-Basepath: c:/www/openclinic\n"
+"X-Poedit-SearchPath-0: admin\n"
+"X-Poedit-SearchPath-1: classes\n"
+"X-Poedit-SearchPath-2: doc\n"
+"X-Poedit-SearchPath-3: home\n"
+"X-Poedit-SearchPath-4: install\n"
+"X-Poedit-SearchPath-5: lib\n"
+"X-Poedit-SearchPath-6: medical\n"
+"X-Poedit-SearchPath-7: navbars\n"
+"X-Poedit-SearchPath-8: scripts\n"
+"X-Poedit-SearchPath-9: shared\n"
 
 #: admin/dump_optimize_db.php:49
 #: admin/dump_view_form.php:77
