--- a/locale/es_ES/es_ES-openclinic.po
+++ b/locale/es_ES/es_ES-openclinic.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenClinic 0.7\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2004-11-05 13:38+0100\n"
+"PO-Revision-Date: 2004-12-07 11:55+0100\n"
 "Last-Translator: jact <jachavar@terra.es>\n"
 "Language-Team:  <jachavar@terra.es>\n"
 "MIME-Version: 1.0\n"
@@ -3138,6 +3138,10 @@ msgstr "Último intento para introducir correctamente la contraseña antes de susp
 #: shared/login_form.php:99
 msgid "Enter"
 msgstr "Entrar"
+
+#: shared/login_form.php:112
+msgid "You must have cookies enabled to access your account."
+msgstr "Debe tener habilitadas las cookies para acceder a su cuenta de usuario."
 
 #: shared/login_suspended.php:27
 msgid "User account suspended"
