--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-$Id: README,v 1.5 2005/01/31 19:57:43 jact Exp $
+$Id: README,v 1.6 2005/08/03 18:03:31 jact Exp $
 
 OpenClinic: Web Medical Records System
 ======================================
@@ -84,4 +84,4 @@ OpenClinic isn't perfect, but your suggestions, feedback and bug reports can hel
 PS: Please, excuse my English, I'm not a native speaker. Also, remember I receive too many emails, so I can't answer to all you, but for sure I'll read all emails I receive.
 
 
--- Jose Antonio Chavarría <jachavar@terra.es>
+-- Jose Antonio Chavarría <jachavar@gmail.com>
